--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.18.0",
+    "element-ui": "^2.9.1",
     "jquery": "^3.3.1",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.16",
